# Python_Web_HW13_2

./: README.md  docker-compose.yml  pyproject.toml
notes/notes/: settings.py
notes/quotes/: forms.py  models.py  urls.py  utils.py  views.py
notes/quotes/migrations/: 0001_initial.py
notes/quotes/static/quotes/: style.css
notes/quotes/templates/quotes/: add_author.html  add_quote.html  author_detail.html  base.html  index.html  tag_quotes.html
notes/users/: forms.py  urls.py  views.py
notes/users/templates/users/: password_reset.html  password_reset_confirm.html  password_reset_email.html  signin.html  signup.html
notes/utils/: insert_quotes_to_mongo.py  migration.py
