[tool.poetry]
name = "py-web-hw13-2"
version = "0.1.0"
description = ""
authors = ["Maksym Melnyk <maks.melnyk.94@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
pymongo = "^4.6.2"
django-environ = "^0.11.2"
pillow = "^10.2.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
